--- a/rcode/peerassmt1.rmd
+++ b/rcode/peerassmt1.rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Coursera Reproducible Research Peer Assessment #1'
 author: "Bill Cary"
-date: "Sunday, December 7, 2014"
+date: "Sunday, December 14, 2014"
 output: html_document
 ---
 
@@ -23,9 +23,9 @@ opts_chunk$set(echo = TRUE)
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 suppressMessages(library(ggplot2))     # General plotting functions
 suppressMessages(library(plyr))        # Data manipulation
-suppressMessages(library(dplyr))        # Data manipulation
+suppressMessages(library(dplyr))       # Data manipulation
 suppressMessages(library(lubridate))   # Handling date values
-suppressMessages(library(Amelia))      # Imputation of missing values
+suppressMessages(library(timeDate))    # Handling date values
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # Set paths for files and directory structure
@@ -186,7 +186,7 @@ qplot(sumdata$dailysum, binwidth = 1350)
 ```
 
 
-Next, we calculate the mean and median total steps per day, ignoring NA values.
+Next, we calculate the mean and median total steps per day.
 ```{r newmeanmedian}
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # Use data summarized above to determine daily mean and median steps
@@ -197,6 +197,45 @@ mediansteps <- median(sumdata$dailysum, na.rm = TRUE)
 
 The mean number of steps taken per day is `r meansteps` and the median number
 of steps taken per day is `r mediansteps`.
+
+As can be seen above, these numbers differ very little from the mean and median
+values determined without imputing missing data.  In this case, imputation of
+missing data appears to have made very little difference in the estimates for
+the total dfaily number of steps.
+
+#### Are there differences in activity patterns between weekdays and weekends?
+To answer this question, we must first add a column to our new dataframe to
+indicate weather the falls on a weekday or a weekend.  Then we will make
+seperate time series plots of the average steps, by interval, for both weekdays
+and weekends.
+```{r weekdays}
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# Add the factor column indicating whether the date falls on a weekend or
+# a weekday.
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+merged$weekday <- as.factor(ifelse(isWeekday(merged$date.trans),
+                                   'weekday', 'weekend'))
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# Summarize data to determine the total number of steps taken each day.
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+dailyavg <- ddply(merged, c('interval', 'weekday'), summarise,
+                  dailymean = mean(steps, na.rm = TRUE))
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# Create the plot
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ggplot(dailyavg, aes(x=interval, y=dailymean)) + 
+        geom_point(shape=1) +
+        facet_grid(weekday ~ .)
+```
+
+Based on the plot above, it appears that there ARE differences in daily activity
+patterns between weekends and weekdays.  Most obviously, it is apparent that
+activity begins earlier in the day on weekdays, and it continues later into the
+evening on weekends.  This makes intuitive sense, in that one would expect that
+people to be up earlier on weekdays to go to work, and out later at night on
+weekends since they are able to sleep in the following day.
 
 #### Miscellaneous Support Information
 Print out system and session information to support future readers in
